new proj/src/objects/GE_ES_ITO_Competitor__c.object
<CustomObject>
    <description>This is the junction object that links the Competitor Account to the Opportunity.  It contains detailed competitor information regarding their offerings on the specific Opportunity.</description>
    <fields>
        <fullName>GE_ES_Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If competitor is unknown, enter &apos;Unknown Competitor&apos;</inlineHelpText>
        <label>Competitor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.GE_ES_Competitor__c</field>
                <operation>equals</operation>
                <value>Yes</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitor</relationshipLabel>
        <relationshipName>Competitor_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Complete_Scope__c</fullName>
        <label>Complete Scope?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Contract_Details__c</fullName>
        <inlineHelpText>Select the contract features or details about which you know some information.  Outline the details in the Comments box below.</inlineHelpText>
        <label>Contract Details</label>
        <picklist>
            <picklistValues>
                <fullName>Limitation of Liability Caps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collateral Damage Caps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compressor Covered</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Country_of_Origin__c</fullName>
        <label>Country of Origin</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Customer_Relationship__c</fullName>
        <inlineHelpText>This describes the strength of the relationship the Competitor has with the OEM or End User.</inlineHelpText>
        <label>Customer Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Preferred Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weak</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Cycle_Time__c</fullName>
        <label>Cycle Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Delivery_Time__c</fullName>
        <label>Delivery Time (weeks)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Delivery_Times__c</fullName>
        <label>Delivery Times</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Features__c</fullName>
        <label>Features</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Framework_Agreement_ms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Framework Agreement?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_Level_of_Expertise__c</fullName>
        <label>Level of Expertise</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Mfg_Capacity__c</fullName>
        <label>Mfg Capacity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_OEM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Is the Competitor also using an OEM?  If so, please indicate the OEM here.</inlineHelpText>
        <label>OEM</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Please select an OEM account.</errorMessage>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>OEM</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitor (OEM)</relationshipLabel>
        <relationshipName>Competitor_OEM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Opportunity_Acct_Region__c</fullName>
        <formula>GE_ES_Opportunity__r.Account.GE_ES_Sales_Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Acct Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Opportunity_Disposition_Reason__c</fullName>
        <formula>Text(GE_ES_Opportunity__r.GE_ES_Disposition_Reason__c)</formula>
        <label>Opportunity Disposition Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Opportunity_Stage__c</fullName>
        <formula>Text(GE_ES_Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Competitor</relationshipLabel>
        <relationshipName>Competitor_Opp</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_ES_Performance_Guarantee__c</fullName>
        <label>Performance Guarantee</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Price1__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Price__c</fullName>
        <label>Price(%)</label>
        <picklist>
            <picklistValues>
                <fullName>Less than -25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater than 25</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Primary_Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_Product_Description__c</fullName>
        <label>Product Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Product_Quantity__c</fullName>
        <label>Product Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Product__c</fullName>
        <label>Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Regional_Capabilities__c</fullName>
        <label>Regional Capabilities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Resource_Availability__c</fullName>
        <label>Resource Availability</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Schedule_Duration__c</fullName>
        <label>Schedule/Duration</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Scope_Type__c</fullName>
        <inlineHelpText>For CS Competitors: CSA refers to risk sharing contract types.  MMP contract types that does not include risk sharing.  O&amp;M refers to Operation and Maintenance agreements.</inlineHelpText>
        <label>Scope Type</label>
        <picklist>
            <controllingField>GE_ES_Complete_Scope__c</controllingField>
            <picklistValues>
                <fullName>Engineered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Constructed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Technology__c</fullName>
        <label>Technology</label>
        <picklist>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuclear</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Terms_Conditions__c</fullName>
        <inlineHelpText>Indicate whether the competitor will accept the customer&apos;s preferred terms and conditions completely or will make exceptions.  Highlight any specific information you know in the Comments box below.</inlineHelpText>
        <label>Terms &amp; Conditions</label>
        <picklist>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceptions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Thermal_Performance__c</fullName>
        <label>Thermal Performance</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Transportation__c</fullName>
        <label>Transportation</label>
        <picklist>
            <picklistValues>
                <fullName>Train</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Value_of_Product__c</fullName>
        <label>Value of Product</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Warranty__c</fullName>
        <label>Warranty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Win_Comp__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Winning primary competitor when GE participated in the deal. Not to be used when GE won the deal.</inlineHelpText>
        <label>Winning Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Competitor</label>
    <nameField>
        <displayFormat>CP-{000000}</displayFormat>
        <label>Competitor ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor</pluralLabel>
    <recordTypes>
        <fullName>CS_Competitor</fullName>
        <active>true</active>
        <description>Use this for CS Competitors.</description>
        <label>CS Competitor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Digital_Energy_Competitor</fullName>
        <active>true</active>
        <description>Use this for Digital Energy Competitors.</description>
        <label>Digital Energy Competitor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Env_Svc_Competitor</fullName>
        <active>true</active>
        <description>Use this for Environmental Services.</description>
        <label>Env Svc Competitor</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_PW_Water_IWS_Competitor</fullName>
        <active>true</active>
        <label>Water IWS Competitor</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_PW_Wind_Equipment_Competitor</fullName>
        <active>true</active>
        <label>Wind Equipment Competitor</label>
    </recordTypes>
    <recordTypes>
        <fullName>IS_Competitor</fullName>
        <active>true</active>
        <description>Use for IS Competitors.</description>
        <label>IS Competitor</label>
    </recordTypes>
    <recordTypes>
        <fullName>MCS_Competitor</fullName>
        <active>true</active>
        <description>Use this for MCS Competitors.</description>
        <label>MCS Competitor</label>
    </recordTypes>
    <recordTypes>
        <fullName>OG_Competitor</fullName>
        <active>true</active>
        <description>Record Type used for all OG Competitor layout assignments</description>
        <label>OG Competitor</label>
    </recordTypes>
    <recordTypes>
        <fullName>PS_Competitor</fullName>
        <active>true</active>
        <description>Use this for PS Competitors.</description>
        <label>PS Competitor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Solar_Equipment_Competitor</fullName>
        <active>true</active>
        <label>Solar Equipment Competitor</label>
    </recordTypes>
    <recordTypes>
        <fullName>WindServices_Competitor</fullName>
        <active>true</active>
        <description>Use this for WindServices Competitors.</description>
        <label>WindServices Competitor</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>